@@ -1,3 +1,10 @@
+2017-07-24  Thomas Koenig  <tkoenig@gcc.gnu.org>
+	    Mikael Morin <mikael@gcc.gnu.org>
+
+	PR fortran/66102
+	* fortran/trans-array.c (gfc_conv_resolve_dependencies):
+	Break if dependency has been found.
+
 2017-07-23  Alexander Monakov  <amonakov@ispras.ru>
 
 	* interface.c (pair_cmp): Fix gfc_symbol comparison.  Adjust comment.
